# analyzef1

./: .gitignore  Procfile  README.md  requirements.txt  setup.cfg  setup.py  setup.sh  setup_heroku.sh
.github/: dependabot.yml
analyzef1/: Home.py  __main__.py  main.py  utils.py
analyzef1/commands/: __init__.py  constants.py
analyzef1/constants/: __init__.py  driver_constants.py  session_constants.py  ui_constants.py
analyzef1/data_management/: __init__.py  analysis.py  data_handler.py  plotter.py
analyzef1/pages/: 1_🗓️_Event_Schedule.py  2_📈_Analyze_Previous_Session.py  2_📈_Analyze_Session.py  3_📊_Leaderboard.py  4_📰 _F1_News.py
analyzef1/persistance/: __init__.py  base.py  create_database.py  season_model.py
analyzef1/ui/: __init__.py  ui.py
html-demo/: calendar.html
