[metadata]
name =  analyzef1
version = attr: analyzef1.__version__
license = GPLv3
license_files = LICENSE
author = erdieee
home_page = https://github.com/erdieee/analyzef1
description = AnalyzeF1 - Analyze Formula 1 Data
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8

[options.entry_points]
console_scripts =
    analyzef1 = analyzef1.main:main